--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,7 @@ jobs:
 
       - name: Run lint:fix if lint failed
         if: steps.lint.outcome == 'failure'
-        run: npm run lint:fix
+        run: npm run lint:fix # Simulate linting errors fix
 
       - name: Run tests with coverage
         run: npm run test:coverage
@@ -101,3 +101,33 @@ jobs:
         run: |
           docker push ${{ steps.image_tags.outputs.version_tag }}
           docker push ${{ steps.image_tags.outputs.latest_tag }}
+
+  cd:
+    runs-on: ubuntu-latest
+    needs: ci
+    permissions:
+      contents: "read"
+      id-token: "write"
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v4
+
+      - name: Authenticate to Google Cloud
+        id: auth
+        uses: "google-github-actions/auth@v2"
+        with:
+          project_id: ${{ secrets.GCP_PROJECT_ID }}
+          workload_identity_provider: ${{ secrets.GCP_WORKLOAD_IDENTITY_PROVIDER }}
+          service_account: ${{ secrets.GCP_SERVICE_ACCOUNT }}
+
+      - name: Google Cloud Run deployment
+        id: "deploy"
+        uses: "google-github-actions/deploy-cloudrun@v2"
+        with:
+          service: ${{ secrets.CLOUDRUN_SERVICE_NAME }}
+          region: ${{ secrets.GCP_REGION }}
+          image: ${{ secrets.GCP_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/${{ secrets.AR_REPO_NAME }}/${{ secrets.CLOUDRUN_SERVICE_NAME }}:latest
+          revision_traffic: "LATEST=100"
+
+      - name: "Show Cloud Run Service URL"
+        run: echo "Successfully deployed to ${{ steps.deploy.outputs.url }}"
