--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -108,6 +108,8 @@ jobs:
     permissions:
       contents: "read"
       id-token: "write"
+    env:
+      IMAGE_NAME: ${{ secrets.GCP_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/${{ secrets.AR_REPO_NAME }}/${{ secrets.CLOUDRUN_SERVICE_NAME }}:latest
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
@@ -120,12 +122,18 @@ jobs:
           workload_identity_provider: ${{ secrets.GCP_WORKLOAD_IDENTITY_PROVIDER }}
           service_account: ${{ secrets.GCP_SERVICE_ACCOUNT }}
 
-      - name: Google Cloud Run deployment
-        id: "deploy"
-        uses: "google-github-actions/deploy-cloudrun@v2"
+      - name: "Set up Cloud SDK"
+        uses: "google-github-actions/setup-gcloud"
         with:
-          service: ${{ secrets.CLOUDRUN_SERVICE_NAME }}
-          region: ${{ secrets.GCP_REGION }}
-          image: ${{ secrets.GCP_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/${{ secrets.AR_REPO_NAME }}/${{ secrets.CLOUDRUN_SERVICE_NAME }}:latest
-          revision_traffic: "LATEST=100"
-          flags: '--ingress="all" --allow-unauthenticated --cpu-throttling --min=1 --max-instances=3 --cpu=1 --memory="256Mi" --port="3000" --liveness-probe="/health,timeoutSeconds=10,httpGet.port=3000"'
+          version: ">= 363.0.0"
+
+      - name: Google Cloud Run deployment
+        run: |
+          gcloud run deploy ${{ secrets.CLOUDRUN_SERVICE_NAME }} \
+            --image="${{ env.IMAGE_NAME }}" \
+            --platform=managed \
+            --allow-unauthenticated \
+            --port="3000" \
+            --liveness-probe=/health,timeoutSeconds=10,httpGet.port=3000 \
+            --no-traffic=false \
+            --cpu=1 --memory="512Mi"
