chore: update CI workflow to refine liveness probe configuration and adjust instance scaling parameters for Cloud Run deployment

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -134,7 +134,8 @@ jobs:
             --platform=managed \
             --allow-unauthenticated \
             --port="3000" \
-            --liveness-probe=/health,timeoutSeconds=10,httpGet.port=3000 \
+            --liveness-probe=httpGet.path=/health,timeoutSeconds=10,httpGet.port=3000 \
             --no-traffic=false \
             --cpu=1 --memory="512Mi" \
+            --min-instances=1 --max-instances=3 \
             --region=${{ secrets.GCP_REGION }}
