chore: add step to route traffic to the latest revision in Cloud Run deployment within CI workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -135,7 +135,10 @@ jobs:
             --allow-unauthenticated \
             --port="3000" \
             --liveness-probe=httpGet.path=/health,timeoutSeconds=10,httpGet.port=3000 \
-            --no-traffic=false \
             --cpu=1 --memory="512Mi" \
             --min-instances=1 --max-instances=3 \
             --region=${{ secrets.GCP_REGION }}
+
+      - name: Route traffic to latest revision
+        run: |
+          gcloud run services update-traffic ${{ secrets.CLOUDRUN_SERVICE_NAME }} --to-latest
