--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -70,11 +70,23 @@ jobs:
       - name: "Define Image Tags from git ref"
         id: image_tags
         run: |
-          LATEST_TAG="${{ secrets.GCP_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/${{ secrets.AR_REPO_NAME }}/${{ secrets.CLOUDRUN_SERVICE_NAME }}:latest"
           VERSION_NUMBER="${GITHUB_REF#refs/tags/}"
-          VERSION_TAG="${{ secrets.GCP_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/${{ secrets.AR_REPO_NAME }}/${{ secrets.CLOUDRUN_SERVICE_NAME }}:${VERSION_NUMBER}"
+          if [[ ! "$VERSION_NUMBER" =~ ^v[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
+            echo "Error: Invalid version tag format. Expected vX.Y.Z, got: $VERSION_NUMBER"
+            exit 1
+          fi
+          BASE_URL="${{ secrets.GCP_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/${{ secrets.AR_REPO_NAME }}/${{ secrets.CLOUDRUN_SERVICE_NAME }}"
+          LATEST_TAG="${BASE_URL}:latest"
+          VERSION_TAG="${BASE_URL}:${VERSION_NUMBER}"
+          echo "Git ref: ${GITHUB_REF}"
+          echo "Version number: ${VERSION_NUMBER}"
+          echo "Base URL: ${BASE_URL}"
+          echo "Version tag: ${VERSION_TAG}"
+          echo "Latest tag: ${LATEST_TAG}"
           echo "version_tag=${VERSION_TAG}" >> $GITHUB_OUTPUT
           echo "latest_tag=${LATEST_TAG}" >> $GITHUB_OUTPUT
+          echo "version_number=${VERSION_NUMBER}" >> $GITHUB_OUTPUT
+
       - name: "Build Docker Image"
         run: |
           docker build \
