--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,6 +64,14 @@ jobs:
           workload_identity_provider: ${{ secrets.GCP_WORKLOAD_IDENTITY_PROVIDER }}
           service_account: ${{ secrets.GCP_SERVICE_ACCOUNT }}
 
+      - name: "Set up Cloud SDK"
+        uses: "google-github-actions/setup-gcloud@main"
+        with:
+          version: ">= 363.0.0"
+
+      - name: Configure Docker for AR
+        run: gcloud auth configure-docker ${{ secrets.GCP_REGION }}-docker.pkg.dev
+
       - name: "Build Docker Image"
         id: build
         run: |
@@ -95,7 +103,6 @@ jobs:
 
       - name: "Push Docker Image to Artifact Registry"
         run: |
-          gcloud auth configure-docker ${{ secrets.GCP_REGION }}-docker.pkg.dev
           docker push ${{ steps.build.outputs.latest_tag }}
           docker push ${{ steps.build.outputs.version_tag }}
 
